# docs/swagger.yaml
@@ -1,6 +1,6 @@
 basePath: /
 definitions:
-  server.ErrorDetail:
+  httpapi.ErrorDetail:
     properties:
       code:
         example: validation_error
@@ -13,18 +13,18 @@ definitions:
         example: validation failed
         type: string
     type: object
-  server.ErrorEnvelope:
+  httpapi.ErrorEnvelope:
     properties:
       error:
-        $ref: '#/definitions/server.ErrorDetail'
+        $ref: '#/definitions/httpapi.ErrorDetail'
     type: object
-  server.HealthResponse:
+  httpapi.HealthResponse:
     properties:
       status:
         example: ok
         type: string
     type: object
-  server.Pagination:
+  httpapi.Pagination:
     properties:
       page:
         example: 1
@@ -36,21 +36,21 @@ definitions:
         example: 100
         type: integer
     type: object
-  server.UserDetailEnvelope:
+  httpapi.UserDetailEnvelope:
     properties:
       data:
-        $ref: '#/definitions/server.UserResponse'
+        $ref: '#/definitions/httpapi.UserResponse'
     type: object
-  server.UserListEnvelope:
+  httpapi.UserListEnvelope:
     properties:
       data:
         items:
-          $ref: '#/definitions/server.UserResponse'
+          $ref: '#/definitions/httpapi.UserResponse'
         type: array
       pagination:
-        $ref: '#/definitions/server.Pagination'
+        $ref: '#/definitions/httpapi.Pagination'
     type: object
-  server.UserResponse:
+  httpapi.UserResponse:
     properties:
       birth:
         example: "1990-01-01"
@@ -165,15 +165,15 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/server.UserListEnvelope'
+            $ref: '#/definitions/httpapi.UserListEnvelope'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/server.ErrorEnvelope'
+            $ref: '#/definitions/httpapi.ErrorEnvelope'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/server.ErrorEnvelope'
+            $ref: '#/definitions/httpapi.ErrorEnvelope'
       summary: List users
       tags:
       - users
@@ -194,19 +194,19 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/server.UserDetailEnvelope'
+            $ref: '#/definitions/httpapi.UserDetailEnvelope'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/server.ErrorEnvelope'
+            $ref: '#/definitions/httpapi.ErrorEnvelope'
         "409":
           description: Conflict
           schema:
-            $ref: '#/definitions/server.ErrorEnvelope'
+            $ref: '#/definitions/httpapi.ErrorEnvelope'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/server.ErrorEnvelope'
+            $ref: '#/definitions/httpapi.ErrorEnvelope'
       summary: Create user
       tags:
       - users
@@ -227,15 +227,15 @@ paths:
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/server.ErrorEnvelope'
+            $ref: '#/definitions/httpapi.ErrorEnvelope'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/server.ErrorEnvelope'
+            $ref: '#/definitions/httpapi.ErrorEnvelope'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/server.ErrorEnvelope'
+            $ref: '#/definitions/httpapi.ErrorEnvelope'
       summary: Delete user
       tags:
       - users
@@ -253,19 +253,19 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/server.UserDetailEnvelope'
+            $ref: '#/definitions/httpapi.UserDetailEnvelope'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/server.ErrorEnvelope'
+            $ref: '#/definitions/httpapi.ErrorEnvelope'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/server.ErrorEnvelope'
+            $ref: '#/definitions/httpapi.ErrorEnvelope'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/server.ErrorEnvelope'
+            $ref: '#/definitions/httpapi.ErrorEnvelope'
       summary: Get user by ID
       tags:
       - users
@@ -291,23 +291,23 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/server.UserDetailEnvelope'
+            $ref: '#/definitions/httpapi.UserDetailEnvelope'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/server.ErrorEnvelope'
+            $ref: '#/definitions/httpapi.ErrorEnvelope'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/server.ErrorEnvelope'
+            $ref: '#/definitions/httpapi.ErrorEnvelope'
         "409":
           description: Conflict
           schema:
-            $ref: '#/definitions/server.ErrorEnvelope'
+            $ref: '#/definitions/httpapi.ErrorEnvelope'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/server.ErrorEnvelope'
+            $ref: '#/definitions/httpapi.ErrorEnvelope'
       summary: Update user
       tags:
       - users
@@ -333,23 +333,23 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/server.UserDetailEnvelope'
+            $ref: '#/definitions/httpapi.UserDetailEnvelope'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/server.ErrorEnvelope'
+            $ref: '#/definitions/httpapi.ErrorEnvelope'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/server.ErrorEnvelope'
+            $ref: '#/definitions/httpapi.ErrorEnvelope'
         "409":
           description: Conflict
           schema:
-            $ref: '#/definitions/server.ErrorEnvelope'
+            $ref: '#/definitions/httpapi.ErrorEnvelope'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/server.ErrorEnvelope'
+            $ref: '#/definitions/httpapi.ErrorEnvelope'
       summary: Update user
       tags:
       - users
@@ -362,7 +362,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/server.HealthResponse'
+            $ref: '#/definitions/httpapi.HealthResponse'
       summary: Health check
       tags:
       - system
